# ChangeLog for dev-util/kdevelop-php-docs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.18 2011/04/26 16:05:14 scarabeus Exp $

  26 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdevelop-php-docs-1.1.2.ebuild:
  old

  12 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  kdevelop-php-docs-1.2.0.ebuild:
  Fixed linguas list, bug 359521

*kdevelop-php-docs-1.2.0 (04 Feb 2011)

  04 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdevelop-php-docs-1.2.0.ebuild:
  Version bump

  30 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  kdevelop-php-docs-1.0.2.ebuild, kdevelop-php-docs-1.1.2.ebuild:
  EAPI3

*kdevelop-php-docs-1.1.2 (17 Jan 2011)

  17 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -kdevelop-php-docs-1.1.0.ebuild, -kdevelop-php-docs-1.1.1.ebuild,
  +kdevelop-php-docs-1.1.2.ebuild:
  Version bump, remove old

*kdevelop-php-docs-1.1.1 (28 Nov 2010)

  28 Nov 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +kdevelop-php-docs-1.1.1.ebuild:
  Version bump

*kdevelop-php-docs-1.1.0 (26 Oct 2010)

  26 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +kdevelop-php-docs-1.1.0.ebuild:
  Version bump

  18 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  -kdevelop-php-docs-1.0.0.ebuild, -kdevelop-php-docs-1.0.1.ebuild:
  Remove old

  12 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kdevelop-php-docs-1.0.2.ebuild:
  x86 stable wrt bug #340094

  10 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  kdevelop-php-docs-1.0.2.ebuild:
  Stable on amd64 wrt bug #340094

  14 Sep 2010; Christian Faulhammer <fauli@gentoo.org>
  kdevelop-php-docs-1.0.1.ebuild:
  stable x86, bug 334739

  05 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  kdevelop-php-docs-1.0.1.ebuild:
  Stable on amd64 wrt bug #334739

*kdevelop-php-docs-1.0.2 (04 Sep 2010)

  04 Sep 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +kdevelop-php-docs-1.0.2.ebuild:
  Version bump
