@@ -1,28 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX kdevelop-php-1.2.0-dbustests.patch 3043 RMD160 2dff23913f89a3e9569d07a05c8229a00cd3f7b7 SHA1 f2822a82fb884ce0dc9ca12d31b7aa678de8952c SHA256 049b5ad1458f4c44de5de52ae54928803dc8ec39ed348b599194c49f80cee09b
 AUX kdevelop-php-1.2.0-parmake.patch 560 RMD160 9bb4d993440a42756e5d8a519f65d71fd2213156 SHA1 38b677ef0ce54158431d99dfd5ff6de4a2927300 SHA256 cd58494dd51b2459e9b297c0a76fc09161403aba3937a15b1fa308a2a3c9279d
 DIST kdevelop-php-1.0.2.tar.bz2 815029 RMD160 a8ee46ecdf7fd1b46686919f985a9dbd080798ae SHA1 dd8b9e30a563c5fa9c3dc5a52d994533b1471261 SHA256 8483e99846a8649cb9f0a97f16b144f32ec183ab2a403c17bc1c042cbc9459e9
 DIST kdevelop-php-1.2.0.tar.bz2 657617 RMD160 0ab382af404b32d2c154e634722d5a8c66663966 SHA1 931ebaa41ad583a4cc20655a398f414ff0ff9698 SHA256 c3255afe03a297a38e557cc9220e5b70e848ab10187c83c457aecc45f922f3c7
+DIST kdevelop-php-1.2.3.tar.bz2 658133 RMD160 3be171f168e1dc7e9a07039f122dc59e7a462b63 SHA1 b0dc43cf01d2005f2ad66872ce6b49b093a7ceb4 SHA256 2feae3c2e3870aed1a1d016690805683fab8193bb5fd36f557a6bf85a07fbd0e
 EBUILD kdevelop-php-1.0.2.ebuild 661 RMD160 33635676d77208894df83b0bdd0182607a62e70f SHA1 a932b2fbf97f84aa4c2d3bb3e7e65ae0289fd426 SHA256 f175aa06d95e8fed33ba152a38ede817f9f1fd0d6d9a2d17a7bff2bc2d401b9c
-EBUILD kdevelop-php-1.2.0.ebuild 755 RMD160 d1557a9f7f12ee46608f5b6f4e290fc9b042a766 SHA1 a34486fd0b3f94610a65a9858b18d0a1f0fd3cb8 SHA256 65b6d5ae984882a306e3f4f927b53c7f6de77b98b0ea91e072529decca54aefd
-MISC ChangeLog 3404 RMD160 46684ea1b2406f72b0fe9d44c0a0041ffbec5534 SHA1 35bd694f7e22d8480e32afc88358260dd074ace4 SHA256 8bc80825c25699195818c6acfa540fa3d7a74780d3a9029827f9873bcad69166
+EBUILD kdevelop-php-1.2.0.ebuild 754 RMD160 3b9d7a907cd33bfe420e2cb10d6113b51ccec09a SHA1 f1037608abb1c46980b3141d9834003b7c1926bf SHA256 a6698ab144ad45924283e76cfe0e6f01bd386d0dc6eff18c3b1ccd20070cd134
+EBUILD kdevelop-php-1.2.3.ebuild 764 RMD160 0fb31c0ccc9b5a2ae4cea68ac26c831a707582f5 SHA1 0b67736ce01a98be1100223c504f8e05c692cd8e SHA256 35ec2a9f44c6be42dcc5153fc9a2eb7ca3d0fc4b2509638a73eca13c19cc8a77
+MISC ChangeLog 3636 RMD160 296828efe91a8e0e7d12b29ee287ab087a28cdf6 SHA1 b24b4fdfe68bc88addf119a2f4ca342eda5bf297 SHA256 e2617e35197019b5d7cad0c4ec375e1ac57c5faa4cce4f3387b2cc32a779a23e
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJNtdpbAAoJENwGBM22xffe1MgP/iva6vdZF1p/9fZaD+IXpKNu
-/A2vf+HDlt5X2uM5iI8pOEgcaRlEKIz/4LvIRlojtnPM2suyWpk6VLSdFliK6hu4
-lGNjGHQnIwwup2igycVtqOek7VqfJI29N3PMFbKtrRu9ZPfXOePKnkDlY7nhV8kM
-/EOVy0iOIUEsJIpUlEF8QPrdEg2qZCAjhjyDu5Zc22QxLxSN1fRSe+8hQ771WQu6
-Di7+kYdHJaPPwFjIfYa0rjFhIr15m8TdwKf6UX5+U+KurotVZOSxpEOWykRPJd/t
-qvZ6uobIN9aMihsA7eBRATuZiwCQcik3PGkpmcKZSXWuMTdXcqKNYIVqhz+5NmAi
-BNoGCFm24JlksDEEZQmYm06245ipznSKbAdSD16Wv1PYEBUo0PNpOsdojD/1ljAp
-cLVOPNFmyP4kz3Eh2+69VP55IeEVSzh8SCA2D9NtxU40oeDBrEQWSSeRkSSTjJIJ
-6G+FIc2q7lkz2OUB7EYceLfmubdgKbYGZHydyCTI8wQc1UdwRWJ+rAUQHwgF7zgw
-uqkLIMv7uQlVIsDcDxyNjYayDorloZ/KROy31cw2qm0NylRZHalKi6DLZlwLYeYI
-1Tx5Unh3XMcFNe+9IGb+p1Od1gekxgQEDAQPPRA1o++2+1EyWJ98fZCpeKsiXjJ3
-AIv3aCFuQBqzIzgu2vU1
-=INBc
+iEYEARECAAYFAk4LwzsACgkQFuHa/bHpVdujTwCeKMJ4rTWjQo+mPSBJCMQXPaAj
+W1AAnjNGURi3ff9/UsgC+kk66YYiIhlK
+=1BXD
 -----END PGP SIGNATURE-----
