@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/kdevplatform
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.58 2011/06/07 02:58:47 abcd Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.59 2011/06/30 00:26:30 reavertm Exp $
+
+*kdevplatform-1.2.3 (29 Jun 2011)
+
+  29 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org>
+  +kdevplatform-1.2.3.ebuild:
+  Version bump, bug 373485
 
   07 Jun 2011; Jonathan Callen <abcd@gentoo.org> kdevplatform-1.2.2.ebuild:
   Use add_kdebase_dep() for KDE deps
