@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/kdevelop-php-docs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.18 2011/04/26 16:05:14 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop-php-docs/ChangeLog,v 1.19 2011/06/30 00:28:26 reavertm Exp $
+
+*kdevelop-php-docs-1.2.3 (29 Jun 2011)
+
+  29 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org>
+  +kdevelop-php-docs-1.2.3.ebuild:
+  Version bump, bug 373485
 
   26 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   -kdevelop-php-docs-1.1.2.ebuild:
